# camera_aravis

./: .gitignore  CMakeLists.txt  package.xml
CMakeModules/: FindAravis.cmake
calib/: lucid_camera.yaml  manta_camera.yaml
config/: camera_aravis_config.yaml  lucid.yaml  manta.yaml
launch/: camera.launch.py  lucid.launch.py  manta.launch.py
src/: camnode.cpp
