<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>camera_aravis</name>
  <version>2.0.0</version>
  <description>camera_aravis: An ethernet camera driver for ROS.</description>

  <maintainer email="stevesafarik@gmail.com">Steve Safarik</maintainer>

  <author email="stevesafarik@gmail.com">Steve Safarik</author>
  <author email="andrew.straw@imp.ac.at">Andrew Straw</author>

  <license>LGPLv2</license>

  <url type="website">http://github.com/ssafarik/camera_aravis</url>
  
  <author>strawlab</author>
  <author>Steve Safarik</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>aravis</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_proc</depend>
  <depend>camera_info_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
